--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+/*
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Fredericka+the+Great&display=swap");
+*/
 /*Resetear formato de CSS de la página para los margenes*/
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Volkhov:ital,wght@0,700;1,400&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -8,21 +14,26 @@
 }
 
 body {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  /*  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;*/
+  /*  
+  font-family: "Dancing Script", cursive;
+  font-family: "Fredericka the Great", serif;
+  */
+  font-family: "Volkhov", serif;
+  font-weight: 700;
 }
 
 nav {
   /*Los colores se pueden expresar en exadecimal 
     o con el nombre del color
     */
-  background: black;
-  height: 100px;
+  background: #191819;
+  height: 83px;
   width: 100%;
-  margin-left: 0%;
-  margin-right: 0%;
 }
 
 label.logo {
+  font-family: "Dancing Script", cursive;
   color: #ffffff;
   font-size: 32px;
   padding: 0 100px;
@@ -42,7 +53,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
+  color: #ffffff;
   font-size: 17px;
   text-transform: uppercase;
   line-height: 60px;
@@ -114,22 +125,45 @@ va a tomar las siguientes configuraciones
   }
 }
 
-section{
-    /* Agregar la imagen de fondo */
-    /*background-image: url("https://images.unsplash.com/photo-1448375240586-882707db888b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");*/
-    background:linear-gradient(to bottom, green , #a821643b)
-    , url("https://images.unsplash.com/photo-1448375240586-882707db888b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat;
-    /* Ajustar el fondo para que cubra toda la pantalla */
-    background-size: cover;
-    /* Centrar la imagen de fondo */
-    background-position: center;
-    /* Configuración para que el fondo se ajuste al tamaño de la ventana */
-    height: 100vh;
-    margin: 0;
-    /* Asegurar que el contenido no se desborde del body */
-    overflow-x: hidden;
-
+section {
+  /* Agregar la imagen de fondo */
+  /*background-image: url("https://images.unsplash.com/photo-1448375240586-882707db888b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");*/
+  background: linear-gradient(to bottom, rgb(0, 10, 26), #a821643b),
+    url("https://images.unsplash.com/photo-1448375240586-882707db888b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+      no-repeat;
+  /* Ajustar el fondo para que cubra toda la pantalla */
+  background-size: cover;
+  /* Centrar la imagen de fondo */
+  background-position: center;
+  /* Configuración para que el fondo se ajuste al tamaño de la ventana */
+  height: 100vh;
+  margin: 0;
+  /* Asegurar que el contenido no se desborde del body */
+  overflow-x: hidden;
 }
-/*Termina el menu*/
 
-/*Comienza una nueva seccion*/
+/*Aqui comenzamos la sección de tarjetas*/
+
+.card-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  max-width: 1280px;
+  margin: 150px auto;
+  padding: 20px;
+  gap: 20px;
+}
+
+.card-list .card-item {
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  list-style: none;
+  cursor: pointer;
+}
+
+.card-list .card-item img {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 10px;
+  object-fit: cover;
+}
